Remove     map.touchZoomRotate.disableRotation();

--- a/examples/guides/interpolation/step-0.html
+++ b/examples/guides/interpolation/step-0.html
@@ -15,10 +15,8 @@
             container: 'map',
             style: carto.basemaps.darkmatter,
             center: [2.2021031855412048, 41.3982014758933],
-            zoom: 14,
-
+            zoom: 14
         });
-        map.touchZoomRotate.disableRotation();
 
         const nav = new mapboxgl.NavigationControl({
             showCompass: false
