--- a/examples/misc/legends/legend-buckets.html
+++ b/examples/misc/legends/legend-buckets.html
@@ -37,10 +37,9 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-73.954323, 40.711743],
-      zoom: 15.7,
-
+      zoom: 15.7
     });
-    map.touchZoomRotate.disableRotation();
+
     // Autenticate the client
     carto.setDefaultAuth({
       username: 'cartovl',
