--- a/examples/misc/legends/legend-lines.html
+++ b/examples/misc/legends/legend-lines.html
@@ -36,11 +36,9 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-122.40432, 37.804421878656186],
-      zoom: 11.2,
-
+      zoom: 11.2
     });
 
-    map.touchZoomRotate.disableRotation();
     // Autenticate the client
     carto.setDefaultAuth({
       username: 'dmanzanares',
