--- a/examples/misc/legends/legend-number.html
+++ b/examples/misc/legends/legend-number.html
@@ -36,10 +36,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [0, 43],
-      zoom: 1,
-
+      zoom: 1
     });
-    map.touchZoomRotate.disableRotation();
 
     // Authenticate the client
     carto.setDefaultAuth({
