--- a/examples/misc/legends/legend-numeric-chart.html
+++ b/examples/misc/legends/legend-numeric-chart.html
@@ -38,10 +38,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [2.187695966305114, 41.38802296362937],
-      zoom: 12.073961457702497,
-
+      zoom: 12.073961457702497
     });
-    map.touchZoomRotate.disableRotation();
 
     carto.setDefaultAuth({
       username: 'cartovl',
