--- a/examples/misc/legends/legend-polygon.html
+++ b/examples/misc/legends/legend-polygon.html
@@ -37,10 +37,9 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-73.98076101209858, 40.751681063],
-      zoom: 13,
-
+      zoom: 13
     });
-    map.touchZoomRotate.disableRotation();
+
     // Autenticate the client
     carto.setDefaultAuth({
       username: 'dmanzanares',
