--- a/examples/misc/legends/legend-top.html
+++ b/examples/misc/legends/legend-top.html
@@ -36,10 +36,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-122.424335, 37.771521],
-      zoom: 13,
-
+      zoom: 13
     });
-    map.touchZoomRotate.disableRotation();
 
     // Authenticate the client
     carto.setDefaultAuth({
