--- a/examples/misc/legends/legend-categorical-chart.html
+++ b/examples/misc/legends/legend-categorical-chart.html
@@ -38,10 +38,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [5, 40.5],
-      zoom: 5,
-
+      zoom: 5
     });
-    map.touchZoomRotate.disableRotation();
 
     const nav = new mapboxgl.NavigationControl({
       showCompass: false
@@ -58,7 +56,7 @@
     const source = new carto.source.Dataset('populated_places');
     // Define the visualization
     const viz = new carto.Viz(
-    ` @color: ramp($featurecla, bold)
+      ` @color: ramp($featurecla, bold)
       @histogram: viewportHistogram($featurecla)
       color: @color
       width: 5
