--- a/examples/misc/legends/legend-classifier.html
+++ b/examples/misc/legends/legend-classifier.html
@@ -37,10 +37,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [0, 0],
-      zoom: 0,
-
+      zoom: 0
     });
-    map.touchZoomRotate.disableRotation();
 
     // Authenticate the client
     carto.setDefaultAuth({
