--- a/examples/misc/legends/legend-stroke.html
+++ b/examples/misc/legends/legend-stroke.html
@@ -36,10 +36,9 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-122.424335, 37.771521],
-      zoom: 13,
-
+      zoom: 13
     });
-    map.touchZoomRotate.disableRotation();
+
     // Autenticate the client
     carto.setDefaultAuth({
       username: 'cartovl',
@@ -64,18 +63,18 @@
     layer.on('loaded', () => {
       hideLoader();
 
-    // Get the information for legend
-    const strokeColorLegend = layer.viz.strokeColor.getLegendData();
+      // Get the information for legend
+      const strokeColorLegend = layer.viz.strokeColor.getLegendData();
 
-    let colorLegendList = '';
+      let colorLegendList = '';
 
-    strokeColorLegend.data.forEach((legend) => {
-      const colorHex = rgbToHex(legend.value);
-      colorLegendList +=
+      strokeColorLegend.data.forEach((legend) => {
+        const colorHex = rgbToHex(legend.value);
+        colorLegendList +=
           `<li><span class="point-mark" style="border:2px solid ${colorHex};"></span> <span>${legend.key}</span></li>\n`;
-    });
+      });
 
-    // Update the legend with the legend information
+      // Update the legend with the legend information
       document.getElementById('content').innerHTML = colorLegendList;
     });
 
