Change signature in `viewportHistogram`
From `(x, weight = 1, size = 1000)` to `(x, size = 20, weight = 1)`.

--- a/examples/guides/add-widgets/step-2.html
+++ b/examples/guides/add-widgets/step-2.html
@@ -52,7 +52,7 @@
 
         const source = new carto.source.Dataset("railroad_accidents");
         const viz = new carto.Viz(`
-            @histogram: viewportHistogram($total_damage, 1, 6)
+            @histogram: viewportHistogram($total_damage, 6)
 `);
         const layer = new carto.Layer('layer', source, viz);
 
