--- a/examples/misc/legends/legend-numeric-chart.html
+++ b/examples/misc/legends/legend-numeric-chart.html
@@ -59,7 +59,7 @@
     // Define the visualization
     const viz = new carto.Viz(
       `
-      @histogram: viewportHistogram($hour, 1, 12)
+      @histogram: viewportHistogram($hour, 12)
       color: ramp($hour, bold)
       width: 5
       strokeWidth: 0
