--- a/examples/interactivity/histogram.html
+++ b/examples/interactivity/histogram.html
@@ -37,7 +37,7 @@
       width: 6
       color: ramp($category, vivid)
       @categoryHistogram: viewportHistogram($category)
-      @numericHistogram: viewportHistogram($amount, 1, 10)
+      @numericHistogram: viewportHistogram($amount, 10)
     `);
     const layer = new carto.Layer('layer', source, viz);
 
