--- a/examples/guides/data-driven-viz-2/step-2.html
+++ b/examples/guides/data-driven-viz-2/step-2.html
@@ -57,7 +57,7 @@
                 <header>
                     <h1>US Rail Accidents</h1>
                 </header>
-                <p class="description open-sans">Cause of accident</p>
+                <p class="description open-sans">Type of accident</p>
                 <section>
                     <div id="controls">
                         <ul id="content"></ul>
