--- a/examples/misc/legends/poly-legend-ma.html
+++ b/examples/misc/legends/poly-legend-ma.html
@@ -72,11 +72,17 @@
 
       colorLegend.data.forEach((legend) => {
         const colorHex = rgbToHex(legend.value);
-        const keyMin = legend.key[0].toFixed(2).replace('Infinity', '∞');
-        const keyMax = legend.key[1].toFixed(2).replace('Infinity', '+∞');
+        const keyMin = legend.key[0].toFixed(2);
+        const keyMax = legend.key[1].toFixed(2);
+        let bucket = `[${keyMin},  ${keyMax})`;
+        if (keyMin==='-Infinity'){
+          bucket = `<${keyMax}`;
+        }else if (keyMax==='Infinity'){
+          bucket = `>=${keyMin}`;
+        }
 
         colorLegendList +=
-          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${keyMin} - ${keyMax}</span></li>\n`;
+          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${bucket}</span></li>\n`;
       });
 
       // Update the legend with the legend information
