Change username from examples

--- a/examples/misc/legends/legend-lines.html
+++ b/examples/misc/legends/legend-lines.html
@@ -41,7 +41,7 @@
 
     // Autenticate the client
     carto.setDefaultAuth({
-      username: 'dmanzanares',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
