--- a/examples/misc/legends/legend-polygon.html
+++ b/examples/misc/legends/legend-polygon.html
@@ -42,7 +42,7 @@
 
     // Autenticate the client
     carto.setDefaultAuth({
-      username: 'dmanzanares',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
