Replace old 'cartogl' with 'cartovl' username in two examples

--- a/debug/animation_sql.html
+++ b/debug/animation_sql.html
@@ -61,7 +61,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      username: 'cartogl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
