--- a/debug/animation_sql_notz.html
+++ b/debug/animation_sql_notz.html
@@ -61,7 +61,7 @@
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
-      username: 'cartogl',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
