--- a/examples/guides/data-driven-viz-1/step-5.html
+++ b/examples/guides/data-driven-viz-1/step-5.html
@@ -26,9 +26,10 @@
                 <div id="controls">
                     <ul class="actions">
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('color: ramp(buckets($dn, [80, 160]), [midnightblue, deeppink, gold])')"
-                                id="viz1" checked>
-                            <label for="viz1">Style 1: Manual Breaks</label>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('color: ramp(buckets($dn, [80, 160]), [midnightblue, deeppink, gold])')"
+                                    id="viz1" checked>
+                                Style 1: Manual Breaks</label>
                         </li>
                     </ul>
                     <div id="info"></div>
