--- a/examples/guides/data-driven-viz-1/step-3.html
+++ b/examples/guides/data-driven-viz-1/step-3.html
@@ -26,19 +26,22 @@
                 <div id="controls">
                     <ul class="actions">
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')"
-                                id="viz3" checked>
-                            <label for="viz3">Style 3</label>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalMin($dn), globalMax($dn)), [midnightblue, deeppink, gold])')"
+                                    id="viz3" checked>
+                                Style 3</label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, 0, 160), [midnightblue, deeppink, gold])')"
-                                id="viz4">
-                            <label for="viz4">Style 4</label>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, 0, 160), [midnightblue, deeppink, gold])')"
+                                    id="viz4">
+                                Style 4</label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [midnightblue, deeppink, gold])')"
-                                id="viz5">
-                            <label for="viz5">Style 5</label>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp(linear($dn, globalPercentile($dn, 1), globalPercentile($dn, 99)), [midnightblue, deeppink, gold])')"
+                                    id="viz5">
+                                Style 5</label>
                         </li>
                     </ul>
                     <div id="info"></div>
