Fix alignment in radio buttons for examples in data-driven-viz-2

--- a/examples/guides/data-driven-viz-2/step-1.html
+++ b/examples/guides/data-driven-viz-2/step-1.html
@@ -23,30 +23,30 @@
                 <div id="controls">
                     <ul class="actions">
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [green, yellow, red])')"
-                                id="viz1" checked>
-                            <label for="viz1">
-                                <h2>Style 1</h2>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [green, yellow, red])')"
+                                    id="viz1" checked>
+                                Style 1
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [transparent, gray, yellow])')"
-                                id="viz2">
-                            <label for="viz2">
-                                <h2>Style 2</h2>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [transparent, gray, yellow])')"
+                                    id="viz2">
+                                Style 2
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [hsv(0.5, 1,1), hsv(1, 1, 1)])')"
-                                id="viz3">
-                            <label for="viz3">
-                                <h2>Style 3</h2>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, [hsv(0.5, 1,1), hsv(1, 1, 1)])')"
+                                    id="viz3">
+                                Style 3
                             </label>
                         </li>
                         <li>
-                            <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, temps)')" id="viz4">
-                            <label for="viz4">
-                                <h2>Style 4</h2>
+                            <label>
+                                <input type="radio" name="source" onclick="viz.color.blendTo('ramp($dn, temps)')" id="viz4">
+                                Style 4
                             </label>
                         </li>
                     </ul>
