--- a/examples/guides/data-driven-viz-2/step-2.html
+++ b/examples/guides/data-driven-viz-2/step-2.html
@@ -22,31 +22,27 @@
             <div id="controls">
                 <ul class="actions">
                     <li>
-                        <input type="radio" name="source" onclick="viz.width.blendTo('ramp($total_damage, [0, 50])')"
-                            id="viz0" checked>
-                        <label for="viz0">
-                            <h2>Style 1</h2>
+                        <label>
+                            <input type="radio" name="source" onclick="viz.width.blendTo('ramp($total_damage, [0, 50])')"
+                                id="viz0" checked>Style 1
                         </label>
                     </li>
                     <li>
-                        <input type="radio" name="source" onclick="viz.width.blendTo('sqrt(ramp($total_damage, [0, 50^2]))')"
-                            id="viz1">
-                        <label for="viz1">
-                            <h2>Style 2</h2>
+                        <label>
+                            <input type="radio" name="source" onclick="viz.width.blendTo('sqrt(ramp($total_damage, [0, 50^2]))')"
+                                id="viz1">Style 2
                         </label>
                     </li>
                     <li>
-                        <input type="radio" name="source" onclick="viz.width.blendTo('sqrt($total_damage/globalMax($total_damage))*50')"
-                            id="viz4">
-                        <label for="viz4">
-                            <h2>Style 3</h2>
+                        <label>
+                            <input type="radio" name="source" onclick="viz.width.blendTo('sqrt($total_damage/globalMax($total_damage))*50')"
+                                id="viz4">Style 3
                         </label>
                     </li>
                     <li>
-                        <input type="radio" name="source" onclick="viz.width.blendTo('ramp(globalEqIntervals($total_damage, 3), [0.5, 50])')"
-                            id="viz2">
-                        <label for="viz2">
-                            <h2>Style 4</h2>
+                        <label>
+                            <input type="radio" name="source" onclick="viz.width.blendTo('ramp(globalEqIntervals($total_damage, 3), [0.5, 50])')"
+                                id="viz2">Style 4
                         </label>
                     </li>
                 </ul>
