--- a/examples/guides/add-legends/step-6.html
+++ b/examples/guides/add-legends/step-6.html
@@ -53,10 +53,12 @@
       strokeWidth: 1
     `);
     const layer = new carto.Layer('layer', source, viz);
+    
     layer.addTo(map, 'watername_ocean');
 
     layer.on('loaded', () => {
       hideLoader();
+
       const colorLegend = layer.viz.color.getLegendData({
         othersLabel: 'Default',
         samples: 20
@@ -66,14 +68,22 @@
 
       colorLegend.data.forEach((legend) => {
         const colorHex = rgbToHex(legend.value);
-        const keyMin = legend.key[0].toFixed(2).replace('Infinity', '∞');
-        const keyMax = legend.key[1].toFixed(2).replace('Infinity', '+∞');
+        const keyMin = legend.key[0].toFixed(2);
+        const keyMax = legend.key[1].toFixed(2);
+        let bucket = `${keyMin} - ${keyMax}`;
+        if (keyMin==='-Infinity'){
+          bucket = `<${keyMax}`;
+        }else if (keyMax==='Infinity'){
+          bucket = `>${keyMin}`;
+        }
 
-        colorLegendList +=
-          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${keyMin} - ${keyMax}</span></li>\n`;
+      colorLegendList +=
+          `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${bucket}</span></li>\n`;
       });
+
       document.getElementById('content').innerHTML = colorLegendList;
-    });
+
+   });
 
     function hideLoader() {
       document.getElementById('loader').style.opacity = '0';
@@ -82,6 +92,7 @@
     function rgbToHex(color) {
       return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
     }
+
   </script>
 </body>
 
