Remove console.log from example

--- a/debug/viewportfeatures-perf.html
+++ b/debug/viewportfeatures-perf.html
@@ -77,7 +77,7 @@
         window.feature && window.feature.width.blendTo(200);
         window.feature && window.feature.color.blendTo('red');
       }
-      console.log(viz.variables.wadus2.value.length);
+      // console.log(viz.variables.wadus2.value.length);
     });
 
     function hideLoader() {
