--- a/debug/image-external-no-color.html
+++ b/debug/image-external-no-color.html
@@ -19,7 +19,10 @@
         <h1>External Image with interactivity</h1>
       </header>
       <section>
-        <p class="description open-sans">Symbolize points with an external image, interactivity and no default color</p>
+        <p class="description open-sans">
+          Symbolize points with an external image, interactivity and no default color.
+          The circle around the symbol comes from another layer using 'transparent' color.
+        </p>
       </section>
       <footer class="js-footer"></footer>
     </div>
@@ -34,15 +37,12 @@
   <script>
     const map = new mapboxgl.Map({
       container: 'map',
-      style: carto.basemaps.darkmatter,
+      style: carto.basemaps.positron,
       center: [-95.907985, 37.746163],
-      zoom: 4,
-
+      zoom: 4
     });
 
-    const nav = new mapboxgl.NavigationControl({
-      showCompass: false
-    });
+    const nav = new mapboxgl.NavigationControl();
     map.addControl(nav, 'top-left');
 
     carto.setDefaultAuth({
@@ -52,13 +52,22 @@
 
     const source = new carto.source.Dataset('walmarts');
     const viz = new carto.Viz(`
-    width: 25
-    symbol: image('https://libs.cartocdn.com/carto-vl/assets/walmart.svg')
+      width: 25
+      symbol: image('https://libs.cartocdn.com/carto-vl/assets/walmart.svg')
+      symbolPlacement: ALIGN_CENTER
     `);
-
     const layer = new carto.Layer('layer', source, viz);
-
     layer.addTo(map, 'watername_ocean');
+
+    const source2 = new carto.source.Dataset('walmarts');
+    const viz2 = new carto.Viz(`
+      width: 50
+      strokeColor: DarkOrange
+      strokeWidth: 3
+      color: transparent
+    `);
+    const layer2 = new carto.Layer('layer2', source2, viz2);
+    layer2.addTo(map, 'layer');
 
     const DURATION = 10;
     const interactivity = new carto.Interactivity(layer);
