--- a/debug/multi-anim.html
+++ b/debug/multi-anim.html
@@ -39,7 +39,7 @@
         map.addControl(nav, 'top-left');
 
         carto.setDefaultAuth({
-            username: 'rochoa',
+            username: 'cartovl',
             apiKey: 'default_public'
         });
         const s = carto.expressions;
@@ -59,9 +59,9 @@
         const layer = new carto.Layer('gpstrack', source, viz);
         layer.addTo(map, 'watername_ocean');
         const fishnetSource = new carto.source.SQL(`
-        WITH fishnet AS (
-            SELECT ST_SetSRID(cells.geom, 4326) as the_geom
-            FROM ST_CreateFishnet(4, 6, 0.001, 0.001, -3.5959, 40.6114) AS cells
+            WITH fishnet AS (
+                SELECT ST_SetSRID(cells.geom, 4326) as the_geom
+                FROM ST_CreateFishnet(4, 6, 0.001, 0.001, -3.5959, 40.6114) AS cells
             )
             select row_number() over() cartodb_id, the_geom, ST_Transform(the_geom, 3857) the_geom_webmercator
             from fishnet
@@ -74,23 +74,23 @@
         const fishnetLayer = new carto.Layer('fishnet', fishnetSource, fishnet);
         fishnetLayer.addTo(map, 'watername_ocean');
         const accelerationsSource = new carto.source.SQL(`
-WITH geoms AS (
-  SELECT
-  ST_Translate(
-    ST_SetSRID(ST_MakePoint(
-      0.002 * accel_lateral,
-      0.002 * accel_lineal
-    ), 4326), -3.593, 40.614
-  ) as the_geom,
-  cartodb_id,
-  date,
-  lap,
-  accel_lateral,
-  accel_lineal
-  FROM rochoa.laptimer_0009_0033_20171119_164902
-)
-SELECT ST_Transform(the_geom, 3857) as the_geom_webmercator, *
-FROM geoms
+            WITH geoms AS (
+            SELECT
+            ST_Translate(
+                ST_SetSRID(ST_MakePoint(
+                0.002 * accel_lateral,
+                0.002 * accel_lineal
+                ), 4326), -3.593, 40.614
+            ) as the_geom,
+            cartodb_id,
+            date,
+            lap,
+            accel_lateral,
+            accel_lineal
+            FROM laptimer_0009_0033_20171119_164902
+            )
+            SELECT ST_Transform(the_geom, 3857) as the_geom_webmercator, *
+            FROM geoms
         `);
         const accelerationsBg = new carto.Viz(`
             width: 4
