--- a/examples/advanced/landing-page/rivers.html
+++ b/examples/advanced/landing-page/rivers.html
@@ -25,20 +25,15 @@
       container: 'map',
       style: carto.basemaps.darkmatter,
       center: [-109.09006557529761, 38.851788545949745],
-      zoom: 8,
-      scrollZoom: false,
-
-
+      zoom: 8
     });
 
-    const nav = new mapboxgl.NavigationControl({
-      showCompass: false
-    });
+    const nav = new mapboxgl.NavigationControl();
     map.addControl(nav, 'top-left');
 
     // Define user
     carto.setDefaultAuth({
-      username: 'mamataakella',
+      username: 'cartovl',
       apiKey: 'default_public'
     });
 
