--- a/examples/advanced/landing-page/spend-data.html
+++ b/examples/advanced/landing-page/spend-data.html
@@ -25,15 +25,10 @@
       container: 'map',
       style: carto.basemaps.darkmatter,
       center: [2.1700314874017295, 41.385423962673826],
-      zoom: 17,
-      scrollZoom: false,
-
-
+      zoom: 17
     });
 
-    const nav = new mapboxgl.NavigationControl({
-      showCompass: false
-    });
+    const nav = new mapboxgl.NavigationControl();
     map.addControl(nav, 'top-left');
 
     // Define user
