Move examples data to its own `examples.js` file

--- a/examples/editor/index.html
+++ b/examples/editor/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <script src="../../dist/carto-vl.js"></script>
+    <script src="examples.js"></script>
     <script src="index.js" defer></script>
 </head>
 
@@ -33,7 +34,8 @@
                     <label class="cvl-Sidebar--label" for="user"> Username</label>
                     <input type="text" class="cvl-Sidebar--Input" id="user" value="cartovl" />
                     <div class="cvl-Sidebar-RadioButtonContainer">
-                        <input id="source-dataset" type="radio" class="cvl-Sidebar--RadioButton" name="source" value="dataset" checked>
+                        <input id="source-dataset" type="radio" class="cvl-Sidebar--RadioButton" name="source" value="dataset"
+                            checked>
                         <label class="cvl-Sidebar--label" for="source-dataset">Dataset</label>
                         <input id="source-query" type="radio" class="cvl-Sidebar--RadioButton" name="source" value="query">
                         <label class="cvl-Sidebar--label" for="source-query">Query</label>
