Add label:updated log in labels examples

--- a/debug/labels-lines.html
+++ b/debug/labels-lines.html
@@ -68,6 +68,7 @@
           type: 'FeatureCollection',
           features: geojsonFeatures
         });
+        console.log('* labels updated');
       };
 
       layer.on('updated', layerUpdated);
