--- a/debug/labels-points.html
+++ b/debug/labels-points.html
@@ -71,6 +71,7 @@
           type: 'FeatureCollection',
           features: geojsonFeatures
         });
+        console.log('* labels updated');
       };
 
       layer.on('updated', layerUpdated);
