--- a/debug/labels-polygons.html
+++ b/debug/labels-polygons.html
@@ -68,6 +68,7 @@
           type: 'FeatureCollection',
           features: geojsonFeatures
         });
+        console.log('* labels updated');
       };
 
       layer.on('updated', layerUpdated);
