--- a/examples/styling/style-by-number.html
+++ b/examples/styling/style-by-number.html
@@ -74,7 +74,7 @@
       apiKey: 'default_public'
     });
 
-    // Style by method
+    // Style numeric attributes
     // Interpolate
     const rampInterpolateViz = new carto.Viz(`
       color: ramp(linear($pct_higher_ed,30,80),pinkyl)
