--- a/examples/legends/linear-points.html
+++ b/examples/legends/linear-points.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Legend unclassed | CARTO</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <script src="../../../dist/carto-vl.js"></script>
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
-    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+  <title>Legend unclassed | CARTO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <script src="../../../dist/carto-vl.js"></script>
+  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
@@ -42,6 +42,11 @@
       zoom: 1
     });
 
+    const nav = new mapboxgl.NavigationControl({
+      showCompass: false
+    });
+    map.addControl(nav, 'top-left');
+
     carto.setDefaultAuth({
       username: 'cartovl',
       apiKey: 'default_public'
@@ -62,10 +67,13 @@
       const colorLegend = layer.viz.color.getLegendData();
       let colorLegendList = '';
       // Get the information for legend
-      colorLegend.data.forEach((legend, index) => {
+      const entries = colorLegend.data;
+      entries.reverse();
+      entries.forEach((legend, index) => {
         const colorHex = rgbToHex(legend.value);
+        const entry = legend.key.toFixed(2);
         colorLegendList +=
-          `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
+          `<li><span class="point-mark" style="background-color:${colorHex};"></span> <span>${entry}</span></li>\n`;
       });
 
       // Update the legend with the legend information
