add links for CC and CB

--- a/examples/styling/color-schemes.html
+++ b/examples/styling/color-schemes.html
@@ -24,7 +24,7 @@
             <ul>
               <li>
                 <input type="radio" name="style" onclick="setCartoColor()" id="Cartocolor" checked>
-                <label for="Cartocolor">CARTOColors</label>
+                <label for="Cartocolor"><a href="https://carto.com/carto-colors/" title="CARTOColors" target="_blank">CARTOColors</a></label>
               </li>
               <li>
                   <input type="radio" name="style" onclick="setCartoColorReverse()" id="CartocolorReverse">
@@ -32,7 +32,7 @@
               </li>
               <li>
                   <input type="radio" name="style" onclick="setColorBrewer()" id="Colorbrewer">
-                  <label for="Colorbrewer">ColorBrewer</label>
+                  <label for="Colorbrewer"><a href="http://colorbrewer2.org/#type=sequential&scheme=YlGn&n=5" title="Colorbrewer" target="_blank">ColorBrewer</a></label>
               </li>
               <li>
                   <input type="radio" name="style" onclick="setColorBrewerReverse()" id="ColorbrewerReverse">
