--- a/examples/legends/classified-polygons.html
+++ b/examples/legends/classified-polygons.html
@@ -14,70 +14,92 @@
 <body>
     <div id="map"></div>
     <aside class="toolbox">
-        <div class="box">
-            <header>
-                <h1>Rail Accidents by Weather</h1>
-            </header>
-            <!-- Add legend data -->
-            <section>
-                <div id="controls">
-                    <ul id="content"></ul>
-                </div>
-            </section>
-        </div>
+      <div class="box">
+        <header>
+          <h1>Percent Master's Degree</h1>
+        </header>
+        <section>
+          <div id="controls">
+            <p id="content-title"></p>
+            <ul id="content"></ul>
+          </div>
+        </section>
+        <footer class="js-footer"></footer>
+      </div>
     </aside>
-
+    <div id="loader">
+      <div class="CDB-LoaderIcon CDB-LoaderIcon--big">
+        <svg class="CDB-LoaderIcon-spinner" viewBox="0 0 50 50">
+          <circle class="CDB-LoaderIcon-path" cx="25" cy="25" r="20" fill="none"></circle>
+        </svg>
+      </div>
+    </div>
+  
     <script>
-        const map = new mapboxgl.Map({
-            container: 'map',
-            style: carto.basemaps.darkmatter,
-            center: [-96, 41],
-            zoom: 3
+      const map = new mapboxgl.Map({
+        container: 'map',
+        style: carto.basemaps.voyager,
+        center: [-122.419038, 37.752109],
+        zoom: 12
+      });
+
+      const nav = new mapboxgl.NavigationControl({
+            showCompass: false
         });
+      map.addControl(nav, 'top-left');
 
-        carto.setDefaultAuth({
-            username: 'cartovl',
-            apiKey: 'default_public'
+      carto.setDefaultAuth({
+        username: 'cartovl',
+        apiKey: 'default_public'
+      });
+  
+      const source = new carto.source.Dataset('demographics_sf');
+      const viz = new carto.Viz(`
+        color: ramp(globalquantiles($masters_percent,5),purp)
+        strokeWidth: 1
+      `);
+      const layer = new carto.Layer('layer', source, viz);
+      
+      layer.addTo(map, 'watername_ocean');
+  
+      layer.on('loaded', () => {
+        hideLoader();
+  
+        const colorLegend = layer.viz.color.getLegendData({
+          othersLabel: 'Default',
+          samples: 20
         });
-
-        const source = new carto.source.Dataset("railroad_accidents");
-        const viz = new carto.Viz(`
-            width: 5
-            color: ramp(top($weather,3),[darkorange,darkviolet,darkturquoise])
-            strokeWidth: 0.2
-            strokeColor: black
-        `);
-        const layer = new carto.Layer('layer', source, viz);
-        layer.addTo(map);
-
-        //** ADD LEGEND **//
-
-        // A function to convert map colors to HEX values for legend
-        function rgbToHex(color) {
-            return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
-        }
-
-        // When layer loads, trigger legend event
-        layer.on('loaded', () => {
-
-            // Request data for legend from the layer viz
-            const colorLegend = layer.viz.color.getLegendData();
-            let colorLegendList = '';
-
-            // Create list elements for legend
-            colorLegend.data.forEach((legend, index) => {
-                const color = rgbToHex(legend.value);
-
-                // Style for legend items based on geometry type
-                colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
-            });
-
-            // Place list items in the content section of the title/legend box
-            document.getElementById('content').innerHTML = colorLegendList;
+  
+        let colorLegendList = '';
+  
+        colorLegend.data.forEach((legend) => {
+          const colorHex = rgbToHex(legend.value);
+          const keyMin = legend.key[0].toFixed(2);
+          const keyMax = legend.key[1].toFixed(2);
+          let bucket = `${keyMin} - ${keyMax}`;
+          if (keyMin==='-Infinity'){
+            bucket = `<${keyMax}`;
+          }else if (keyMax==='Infinity'){
+            bucket = `>${keyMin}`;
+          }
+  
+        colorLegendList +=
+            `<li><span class="polygon-mark" style="background-color:${colorHex};"></span> <span>${bucket}</span></li>\n`;
         });
+  
+        document.getElementById('content').innerHTML = colorLegendList;
+  
+     });
+  
+      function hideLoader() {
+        document.getElementById('loader').style.opacity = '0';
+      }
+  
+      function rgbToHex(color) {
+        return "#" + ((1 << 24) + (color.r << 16) + (color.g << 8) + color.b).toString(16).slice(1);
+      }
+  
     </script>
-
-</body>
-
+  </body>
+  
 </html>
